--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detección de Objetos en Tiempo Real</title>
+    <title>Detección en Tiempo Real</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
 </head>
 
 <body>
@@ -18,8 +17,7 @@
     <div id="result-container">
         <div id="result">Esperando...</div>
     </div>
-    <button id="speak-button">Decir en voz alta</button>
-
+    <button id="speak-button">Decir el Objeto Detectado</button>
     <script src="script.js"></script>
 </body>
 
