--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detección en Tiempo Real</title>
+    <title>👀</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Importar TensorFlow.js y COCO-SSD -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
 </head>
 <body>
-    <h1>Detección de Objetos</h1>
+    <h1>👀</h1>
     <div id="video-container">
         <video id="video" autoplay playsinline></video>
     </div>
