Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="video-container">
         <video id="video" autoplay playsinline></video>
     </div>
-    <button id="speak-button">Decir el Objeto Detectado</button>
+    <button id="speak-button">Que hay por delante?</button>
     <div id="result-container">
         <div id="result">Esperando...</div>
     </div>
